--- a/PythonCar/Assembly-CSharp.csproj
+++ b/PythonCar/Assembly-CSharp.csproj
@@ -46,6 +46,8 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\ForceTeleport.cs" />
+     <Compile Include="Assets\RoadPieces\Prefabs\ColorChanger.cs" />
+     <Compile Include="Assets\RoadPieces\Prefabs\HSBColor.cs" />
      <Compile Include="Assets\RoadPieces\SaveMeshInEditor.cs" />
      <None Include="Assets\Standard Assets\Vehicles\Car\Shaders\DiffuseReflectiveShader.shader" />
      <None Include="Assets\Standard Assets\Vehicles\Aircraft\AircraftGuidelines.txt" />
